[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "netbibleapi"
version = "0.1.0"
authors = ["Grahame Bowland <grahame@oreamnos.com.au>"]
description = "access the labs.bible.org API to download NET Bible(R) in XML"
readme = "README.md"
classifiers = [
  "Operating System :: POSIX",
]

[tool.poetry.scripts]
netbibleapi = 'netbibleapi.cli:cli'

[tool.poetry.dependencies]
python = ">=3.7"
click = "^7.1.1"
requests = "^2.23.0"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.4.1"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
deps=pytest
commands=pytest
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
